--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,11 @@
 /* styles/globals.css */
-body {
-    font-family: Arial, sans-serif;
-  }
-  
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+/* formal letter*/
+@import url('https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap');
+
+/* title letter*/
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=SUSE:wght@100..800&display=swap');
