--- a/styles/Avatar.module.scss
+++ b/styles/Avatar.module.scss
@@ -1,3 +1,7 @@
+.avatarContainerFrontPage{
+  cursor: pointer;
+}
+
 .avatarContainerFrontPage img {
   width: 150px;
   height: 150px;
@@ -5,8 +9,13 @@
   border: 5px solid #ccc;
 }
 
+.avatarContainerButton{
+  cursor: pointer;
+}
+
 .avatarContainerButton img {
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
+  border: 2px solid #ccc;
 }
